Support generic List<T> in ScmListCodec